# Kaggle_competitions

./: .gitignore
nyc-taxi-trip-duration/: bash_ins_gpu_env.sh  main.ipynb  main.py  pyproject.toml  pyproject.toml.back  pyrightconfig.json  state.json
playground-s6e3/: .gitignore  1st-place-nvidia-cuml-logistic-regression.ipynb  download_data.sh  main.py  predict-customer-churn-update.ipynb  pyproject.toml
