[project]
name = "nyc-taxi-trip-duration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "cupy-cuda12x==14.0.1",
  "cudf-cu12>=24.10,<25",
  "cuml-cu12>=24.10,<25",
  "numpy>=2.4.4",
  "pandas>=2.2.3",
  "scikit-learn>=1.8.0",
  "scipy>=1.17.1",
  "joblib>=1.5.3",
  "matplotlib>=3.10.8",
  "seaborn>=0.13.2",
  "plotly>=6.7.0",
  "tabulate>=0.10.0",
  "optuna>=4.8.0",
  "statsmodels>=0.14.6",
  "xgboost>=3.2.0",
  "ipykernel>=7.2.0",
  "ipywidgets>=8.1.8",
  "nbdime>=4.0.4",
  "kaggle<2.0.0",
  "pandas-stubs>=3.0.0.260204",
  "pynvim>=0.6.0",
]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"

[tool.uv]
index-strategy = "unsafe-best-match"
